--- a/index.html
+++ b/index.html
@@ -1,1 +1,114 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Servicios de mantenimiento de computadoras">
+    <title>Mantenimiento de Computadoras</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        header {
+            background-color: #007BFF;
+            color: white;
+            text-align: center;
+            padding: 1rem 0;
+        }
+        nav {
+            display: flex;
+            justify-content: center;
+            background-color: #333;
+        }
+        nav a {
+            color: white;
+            padding: 1rem;
+            text-decoration: none;
+            text-align: center;
+        }
+        nav a:hover {
+            background-color: #007BFF;
+        }
+        .container {
+            padding: 20px;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+        .services {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+        }
+        .service-box {
+            background-color: white;
+            padding: 20px;
+            margin: 10px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            width: 300px;
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 1rem 0;
+            position: absolute;
+            width: 100%;
+            bottom: 0;
+        }
+    </style>
+</head>
+<body>
+
+    <!-- Encabezado -->
+    <header>
+        <h1>Servicio de Mantenimiento de Computadoras</h1>
+        <p>Cuidamos de tus equipos para que siempre funcionen al máximo</p>
+    </header>
+
+    <!-- Menú de navegación -->
+    <nav>
+        <a href="#inicio">Inicio</a>
+        <a href="#servicios">Servicios</a>
+        <a href="#contacto">Contacto</a>
+    </nav>
+
+    <!-- Sección principal -->
+    <div class="container" id="inicio">
+        <h1>Bienvenidos a nuestro servicio de mantenimiento</h1>
+        <p>Ofrecemos soluciones personalizadas para mantener y reparar tus equipos de cómputo. Desde limpieza y optimización hasta reparación de hardware y software.</p>
+        
+        <!-- Servicios -->
+        <section id="servicios" class="services">
+            <div class="service-box">
+                <h2>Limpieza y Optimización</h2>
+                <p>Manten tu computadora libre de polvo y funcionando al 100%.</p>
+            </div>
+            <div class="service-box">
+                <h2>Reparación de Hardware</h2>
+                <p>Diagnóstico y reparación de componentes dañados o defectuosos.</p>
+            </div>
+            <div class="service-box">
+                <h2>Instalación de Software</h2>
+                <p>Actualización e instalación de sistemas operativos y aplicaciones.</p>
+            </div>
+        </section>
+    </div>
+
+    <!-- Pie de página -->
+    <footer id="contacto">
+        <p>Contacto: mantenimientopc@example.com | Tel: 123-456-7890</p>
+        <p>&copy; 2024 Mantenimiento de Computadoras. Todos los derechos reservados.</p>
+    </footer>
+
+</body>
+</html>
 
