--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Servicios de mantenimiento de computadoras">
-    <title>Mantenimiento de Computadoras</title>
+    <title>BITBLOWING</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -105,8 +105,8 @@
 
     <!-- Pie de página -->
     <footer id="contacto">
-        <p>Contacto: mantenimientopc@example.com | Tel: 123-456-7890</p>
-        <p>&copy; 2024 Mantenimiento de Computadoras. Todos los derechos reservados.</p>
+        <p>Contacto: bitblowing@gmail.com | Tel: +57 3202274732</p>
+        <p>&copy; 2024 bitblowing. Todos los derechos reservados.</p>
     </footer>
 
 </body>
