--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <!-- Encabezado -->
     <header>
-        <h1>Servicio de Mantenimiento de Computadoras</h1>
+        <h1>BITBLOWING</h1>
         <p>Cuidamos de tus equipos para que siempre funcionen al máximo</p>
     </header>
 
