--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
     <!-- Pie de página -->
     <footer id="contacto">
         <p>Contacto: bitblowing@gmail.com | Tel: +57 3202274732</p>
+         <p>Síguenos en <a href="https://www.instagram.com/bitblowing" target="_blank">Instagram</a></p>
         <p>&copy; 2024 bitblowing. Todos los derechos reservados.</p>
     </footer>
 
