--- a/index.html
+++ b/index.html
@@ -105,7 +105,11 @@
 
     <!-- Pie de página -->
     <footer id="contacto">
-        <p>Contacto: bitblowing@gmail.com | Tel: +57 3202274732  Síguenos en <a href="https://www.instagram.com/bitblowing" target="_blank"> <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;"> </a></p>
+        <p>Contacto: bitblowing@gmail.com | Tel: +57 3202274732  
+    <a href="https://www.instagram.com/bitblowing" target="_blank">
+        <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px; vertical-align: middle;">
+    </a>
+</p>
         <p>&copy; 2024 bitblowing. Todos los derechos reservados.</p>
         
     </footer>
