--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <footer id="contacto">
         <p>Contacto: bitblowing@gmail.com | Tel: +57 3202274732  
     <a href="https://www.instagram.com/bitblowing" target="_blank">
-        <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px; vertical-align: middle;">
+        <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
     </a>
 </p>
         <p>&copy; 2024 bitblowing. Todos los derechos reservados.</p>
